# ai-podcast-generator

./: .gitignore  ARCHITECTURE.md  INSTALL.md  PHASE2_IMPLEMENTATION_PLAN.md  main.py  preflight_check.py  pyproject.toml  requirements.txt  test_modular_pipeline.py
.claude/skills/my-coding-skills/: SKILL.md
config/: .env.example  settings.py
docs/: ARCHITECTURE_DECISION_IN_MEMORY_PROCESSING.md  character_designer_guide.md  full_pipeline_graph  phase3_dialogue_generation_design.md  phase4_voice_synthesis_implementation_plan.md  phase5_audio_post_processing_implementation_plan.md  query_producer_guide.md
examples/: test_query_producer.py
run/: Run_full_graph.py
scripts/: openai_web_search.py
src/agents/phase1/: __init__.py  dedup_relevance_scorer.py  query_producer.py  web_scraper.py
src/agents/phase2/: chapter_planner.py  character_designer.py
src/agents/phase3/: __init__.py  dialogue_engine.py  fact_checker.py  naturalness_injector.py  qa_reviewer.py  ssml_annotator.py
src/agents/phase4/: tts_router.py
src/agents/phase5/: chapter_stitcher.py  cold_open_generator.py  overlap_engine.py  post_processor.py
src/api_factory/: __init__.py
src/api_factory/llm/: __init__.py
src/api_factory/search/: __init__.py
src/api_factory/voice/: __init__.py
src/llm/: prompts.py
src/models/: chapter.py  character.py  dialogue.py  phase4.py  phase5.py  query_models.py  schemas.py
src/pipeline/: __init__.py  graph.py
src/pipeline/phases/: __init__.py  phase1_graph.py  phase2_graph.py  phase3_graph.py  phase4_graph.py  phase5_graph.py
src/tools/: audio_tools.py  elevenlabs_tts.py  gemini_tts.py  google_translate.py  grmini_2.5_pro_tts_invokae.py  openai_tts.py  web_tools.py
src/utils/: cost_tracker.py  helpers.py  logger.py
tests/: README.md  generate_graph_diagram.py  test_character_designer.py  test_components.py  test_graph_with_cached.py  test_overlap_fix.py  test_query_producer_minimal.py  test_ssml_fix.py
tests/integration/: test_phase4_graph.py
tests/unit/: test_phase4_router.py
