[project]
name = "podcast-creator"
version = "0.1.0"
description = "A podcast creation tool"
requires-python = ">=3.11"
dependencies = [
    # Core LangChain & LLM
    "langchain>=0.1.0",
    "langchain-core>=0.1.0",
    "langchain-openai>=0.0.5",
    "langchain-text-splitters>=0.0.1",
    "langgraph>=0.0.20",
    # OpenAI
    "openai>=1.12.0",
    # Google APIs
    "google-api-python-client>=2.100.0",
    "google-auth>=2.25.2",
    # Web Scraping
    "beautifulsoup4>=4.12.0",
    "requests>=2.31.0",
    "lxml>=5.1.0",
    # Embeddings & Similarity Search
    "sentence-transformers>=2.2.2",
    "faiss-cpu>=1.7.4",
    "numpy>=1.24.3",
    "scikit-learn>=1.3.2",
    # API Framework
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.3",
    "pydantic-settings>=2.1.0",
    # Audio Processing (Phase 5)
    "pydub>=0.25.1",
    "mutagen>=1.47.0",
    # Utilities
    "python-dotenv>=1.0.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "config*"]
